# MonteCarlo

./: .gitignore  CMakeLists.txt  README.md  run.bat
src/: Camera.h  MonteCarloParams.h  Shader.h  VertexAttrib.h  main.cpp
src/cudaSrc/: helper_cuda.h  monteCarloGPU.cu  vectorHelperCUDA.h
src/shaders/: cmrSpline.fs  cmrSpline.vs  fragment.fs  monteCarlo.comp  vertex.vs
